...
    var id: String { rawValue }
    
    var displayName: String {
        switch self {
        case .E10: return "Unleaded Petrol"
        case .E5: return "Super Unleaded"
        case .B7: return "Diesel"
        case .SDV: return "Premium Diesel"
        }
    }
    
    var shortName: String { displayName }
}
...
